--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#1a1a2e" />
         <title>Breathing Exercise</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="manifest" href="manifest.json" />
     </head>
     <body>
         <header>
@@ -67,5 +69,10 @@
             </nav>
         </main>
         <script src="script.js"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('/sw.js');
+            }
+        </script>
     </body>
 </html>
