--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="manifest" href="manifest.json" />
     </head>
+    <svg style="display: none;">
+        <symbol id="yt-icon" viewBox="0 0 24 24">
+            <path d="M23.5 6.2a3 3 0 0 0-2.1-2.1C19.5 3.5 12 3.5 12 3.5s-7.5 0-9.4.6A3 3 0 0 0 .5 6.2 31.3 31.3 0 0 0 0 12c0 2 .2 4 .5 5.8a3 3 0 0 0 2.1 2.1c1.9.6 9.4.6 9.4.6s7.5 0 9.4-.6a3 3 0 0 0 2.1-2.1c.4-1.8.5-3.8.5-5.8 0-2-.2-4-.5-5.8zM9.5 15.5v-7l6.3 3.5-6.3 3.5z"/>
+        </symbol>
+    </svg>
     <body>
         <header>
             <h1>Breathing Exercise</h1>
@@ -54,17 +59,17 @@
             </details>
             <nav class="quick-practice">
                 <span class="quick-label">Wim Hof:</span>
-                <a href="https://www.youtube.com/watch?v=tybOi4hjZFQ" target="_blank" rel="noopener" title="Guided Breathing Session">
-                    <svg class="yt-icon" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M23.5 6.2a3 3 0 0 0-2.1-2.1C19.5 3.5 12 3.5 12 3.5s-7.5 0-9.4.6A3 3 0 0 0 .5 6.2 31.3 31.3 0 0 0 0 12c0 2 .2 4 .5 5.8a3 3 0 0 0 2.1 2.1c1.9.6 9.4.6 9.4.6s7.5 0 9.4-.6a3 3 0 0 0 2.1-2.1c.4-1.8.5-3.8.5-5.8 0-2-.2-4-.5-5.8zM9.5 15.5v-7l6.3 3.5-6.3 3.5z"/>
-                    </svg>
-                    3 rounds
+                <a href="https://youtu.be/KrO_TWvJuZsk" target="_blank" rel="noopener" title="Guided Breathing Session">
+                <svg class="yt-icon" aria-hidden="true"><use href="#yt-icon"/> </svg>
+                    beginner
                 </a>
-                <a href="https://www.youtube.com/watch?v=0BNejY1e9ik" target="_blank" rel="noopener" title="Extended Session">
-                    <svg class="yt-icon" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M23.5 6.2a3 3 0 0 0-2.1-2.1C19.5 3.5 12 3.5 12 3.5s-7.5 0-9.4.6A3 3 0 0 0 .5 6.2 31.3 31.3 0 0 0 0 12c0 2 .2 4 .5 5.8a3 3 0 0 0 2.1 2.1c1.9.6 9.4.6 9.4.6s7.5 0 9.4-.6a3 3 0 0 0 2.1-2.1c.4-1.8.5-3.8.5-5.8 0-2-.2-4-.5-5.8zM9.5 15.5v-7l6.3 3.5-6.3 3.5z"/>
-                    </svg>
-                    5 rounds
+                <a href="https://youtu.be/cGatkA8AQJ0" target="_blank" rel="noopener" title="Guided Breathing Session">
+                <svg class="yt-icon" aria-hidden="true"><use href="#yt-icon"/> </svg>
+                    intermediate
+                </a>
+                <a href="https://youtu.be/Yanp3Rqm2b0" target="_blank" rel="noopener" title="Guided Breathing Session">
+                <svg class="yt-icon" aria-hidden="true"><use href="#yt-icon"/> </svg>
+                    advanced
                 </a>
             </nav>
         </main>
